# vue-api

./: .gitignore  README.md  generate_build.py  index.html  package-lock.json  package.json
backend/: main.py  manage.py  requirements.txt  test.http  utils.py
backend/base/: models.py  views.py
backend/globaltechia/: routers.py  utils.py
backend/globaltechia/base/: models.py  views.py
backend/warehouse/: models.py
builds/be-globaltechia/: pyproject.toml
builds/globaltechia/: globaltechia-1.0.0.tgz  package-lock.json  package.json  tsconfig.json  vite.config.ts
builds/globaltechia/src/: index.ts  utils.ts
examples/test_backend_globaltechia/: main.py  requirements.txt
examples/test_frontend_globaltechia/: README.md
examples/test_frontend_globaltechia/vue-project/: package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
installs/: base.Navbar.json  example.App.vue  example.default_router.js  example.main.css  example.main.ts  globaltechia-1.0.0.tgz  start_globaltechia.sh
src/: main.ts
src/globaltechia/: utils.js  utils.ts
src/globaltechia/components/: GenericForm.vue  GenericItem.vue  GenericList.vue  GenericModalView.vue  GenericModelView.vue  GenericTable.vue  GenericView.vue  Navbar.vue  Notification.vue  Printable.vue  SelectModel.vue  Tabla.vue
src/globaltechia/views/: DashboardView.vue  GroupView.vue  GroupViewList.vue  LoginView.vue  (+4 more)
src/modals/: PruebaModal.vue  PruebaModalSegundo.vue
src/router/: index.ts
src/types/: global.d.ts
src/views/: ActivationsReport.vue  LocalDashboardView.vue  LocalLoginView.vue
(+31 files in other folders)
