[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "be-globaltechia"
version = "0.1.0"
description = "GlobaltechIA BackEnd Framework"
authors = [
    { name = "Jesús Alejandro Ambríz Bedolla", email = "aambrizb@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "fastapi[standard]",
    "tortoise-orm",
    "argon2-cffi",
]

[project.urls]
Homepage = "https://halekz.com"